
Version Next

    - Extracted *Callback interfaces out of NullModem*Stream classes
      NOTE: backward-incompatible change.
    - Added "vaadin" sub-package of org.dellroad.stuff.pobj
    - Added @ProvidesProperty annotation and container constructor support
    - Added EnumContainer, EnumComboBox, and EnumUtil
    - Added new method Primitive.getDefaultValue()
    - Fixed bug in AbstractUnsizedContainer
    - Added AbstractBean

Version 1.0.704 Released August 28, 2013

    - Add GraphClonable and GraphCloneRegistry
    - Add subclass hooks for stdout and stderr in ProcessRunner
    - Update VaadinUtil.invoke{,Later} to use VaadinSession.access{Synchronously,}
    - Added RetryTransactionProvider implemented by RetryTransactionAspect
    - Translate UncategorizedDataAccessException's in RetryTransactionAspect
    - Add workaround for SPR-10815 to HibernateIsolationJpaDialect
    - Fixed bug in AbstractUnsizedContainer

Version 1.0.688 Released June 28, 2013

    - Added ThreadParkingLot.getParkedThreads()
    - Added @RetryTransaction and associated AOP aspect
    - Added PersistentObject read() and write() convenience methods
    - Added SpringVaadinSession.configureBean()
    - Added IdleTimeoutInputStream
    - Removed @PostCompletionSupport (use TransactionSynchronizationManager)
    - Update vaadin7 package to Vaadin 7.1.x (note: no longer works for 7.0.x)

Version 1.0.659 Released April 9, 2013

    - Added @Unique validation constraint and related classes
    - Added VaadinUtil.invokeLater() and VaadinApplication.invokeLater()
    - Added AbstractUnsizedContainer and AbstractQueryList.handleSizeChange()
    - Added IndentXMLEventWriter and StackXMLEventReader
    - Fix character encoding bug in pobj package (always use UTF-8)
    - Fixed bug in StringEncoder.enquote(byte[]) when non-zero offset
    - Support Vaadin Touchkit and servlet 2.3 API (issue #18)
    - Update vaadin7 package for 7.0+
    - Added updateTable-oracle.sql